Fix remaining portfolio-page URL reference in template

--- a/advisor/templates/advisor/index.html
+++ b/advisor/templates/advisor/index.html
@@ -2255,7 +2255,7 @@ document.addEventListener('DOMContentLoaded', () => {
     });
     chipShowPortfolio && chipShowPortfolio.addEventListener('click', () => {
         addMessage('Show my portfolio', 'user');
-        window.location.href = "{% url 'portfolio-page' %}";
+        window.location.href = "{% url 'portfolio' %}";
     });
 
     // keypress & send button
